# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt
mazegen/: __init__.py  __main__.py  animate_path.py  ascii_renderer.py  colors.py  curses_renderer.py  maze_drawing.py  maze_generator.py  output_writer.py  parser.py  path_finder.py  player_movement.py  ui_utils.py  utils.py
