[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator with curses visualization and hex output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = {text = "MIT"}
authors = [
    {name = "tlaghzal", email = "tlaghzal@student.1337.ma"},
    {name = "mel-alsa", email = "mel-asla@student.1337.ma"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "ANN"]
exclude = [".venv", "__pycache__", "build", "dist", ".git", ".eggs"]
